# server/src/middleware/logger.js
@@ -1,9 +1,9 @@
 /**
  * @file logger.js
  * @description HTTP request logging middleware using pino
- * @author 3D Diagnostix Development Team
+ * @author InsightHub Development Team
  * @created 2025-10-07
- * @copyright 2025 3D Diagnostix, Inc. All rights reserved.
+ * @copyright 2025 InsightHub. All rights reserved.
  */
 
 import { createLogger, logPageView as defaultLogPageView } from '../services/logging.js';
